objects/LAT_MX_ProductoFoco__c.object
<CustomObject>
    <fields>
        <fullName>Codigo__c</fullName>
        <label>Codigo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripcion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Foco__c</fullName>
        <label>MX Foco</label>
        <referenceTo>LAT_MX_Foco__c</referenceTo>
        <relationshipLabel>MX Productos Foco</relationshipLabel>
        <relationshipName>MX_Productos_Foco</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>MX Producto Foco</label>
    <nameField>
        <label>MX Producto Foco Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MX Productos Foco</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>